Preload tabs in shared media Fix jumping empty context text in sidebar

--- a/src/scss/partials/_rightSidebar.scss
+++ b/src/scss/partials/_rightSidebar.scss
@@ -116,6 +116,10 @@
       min-height: calc((var(--vh, 1vh) * 100) - 100% - 60px);
       display: flex;
       flex-direction: column;
+
+      &.sliding {
+        max-height: calc((var(--vh, 1vh) * 100) - 100% - 60px);
+      }
     }
   }
 
